--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 
+    <script src="./assets/js/config.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
